--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home{
+  /* text-align: center; */
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  
+}
+.main{
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 10px solid black;
+  padding: 10px;
+  background-color: black;
   color: white;
+  margin-top: 50px;
+  
 }
-
-.App-link {
-  color: #61dafb;
+.sub1{
+  width: 100%;
+  background-color: white;
+  margin-bottom: 20px;
+  /* color: black; */
+  /* padding: 5px; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screen{
+  width: 100%;
+  padding: 8px;
+  font-size: 18px;
+  text-align: right;
+  /* flex: 1; */
+}
+.sub2{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.num{
+  width: 55px;
+  height: 35px;
+  border: 1px solid black;
+  background-color: rgb(64, 4, 245);
+  padding: 15px;
+  
+ 
+}
+.btn{
+  width: 100%;
+  height: 100%;
+  background-color: yellow;
+  cursor: pointer;
+  font-size: 18px;
+  
+}
+.num :hover{
+  transform: scale(1.5);
 }
