--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,6 @@
-.home{
-  /* text-align: center; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  
-}
-.main{
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 10px solid black;
-  padding: 10px;
-  background-color: black;
+.daark{
+  background-color: darkgray;
   color: white;
-  margin-top: 50px;
-  
 }
-.sub1{
-  width: 100%;
-  background-color: white;
-  margin-bottom: 20px;
-  /* color: black; */
-  /* padding: 5px; */
-}
-.screen{
-  width: 100%;
-  padding: 8px;
-  font-size: 18px;
-  text-align: right;
-  /* flex: 1; */
-}
-.sub2{
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  cursor: pointer;
-}
-.num{
-  width: 55px;
-  height: 35px;
-  border: 1px solid black;
-  background-color: rgb(64, 4, 245);
-  padding: 15px;
-  
- 
-}
-.btn{
-  width: 100%;
-  height: 100%;
-  background-color: yellow;
-  cursor: pointer;
-  font-size: 18px;
-  
-}
-.num :hover{
-  transform: scale(1.5);
-}
+
+
